feat: AGEL-1223 добавлен перевод и парсинг

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -50,6 +50,8 @@
   "Email должен быть валидным": "Email must be valid",
   "Email должен содержать от 8 до 50 символов": "Email must contain from 8 to 50 characters",
   "Сохранить": "Save",
+  "Изменить": "Change",
+  "Добавить": "Add",
   "Обязательное поле": "Required field",
   "Новый пароль должен быть валидным": "New password must be valid",
   "Новый пароль должен отличаться от старого": "New password must differ from the old one",
@@ -86,6 +88,58 @@
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
   "Авторизуйтесь": "Sign in",
+  "Войдите в личный кабинет": "Log in to your personal account",
+  "Введите код из смс": "Enter the code from SMS",
+  "Введите пароль": "Enter password",
+  "Условия пролонгации депозита": "Conditions for deposit renewal",
+  "Не удалось пролонгировать депозит": "Failed to renew the deposit",
+  "Ваш депозит успешно пролонгирован": "Your deposit has been successfully renewed",
+  "Вернуться к странице депозита": "Return to the deposit page",
+  "Срок пролонгации": "Renewal term",
+  "мес": "months",
+  "Пролонгировать депозит": "Renew the deposit",
+  "счета": "accounts",
+  "счета с процентами": "interest-bearing accounts",
+  "Схема депозита": "Deposit scheme",
+  "Срочный": "Urgent",
+  "Длительность существования": "Term of existence",
+  "Cтавка при досрочном отзыве": "Rate for early withdrawal",
+  "Отзывной": "Revocable",
+  "Изначальная сумма депозита": "Initial deposit amount",
+  "Отозвать": "Withdraw",
+  "Пополнить": "Top-up",
+  "Реквизиты": "Requisites",
+  "График начисления процентов": "Interest accrual schedule",
+  "Информация о пополнении депозита": "Deposit top-up information",
+  "Пролонгация депозита": "Deposit renewal",
+  "Мои депозиты": "My deposits",
+  "Депозит не найден": "Deposit not found",
+  "Перейти к списку депозитов": "Go to the list of deposits",
+  "Главная": "Main",
+  "Карты": "Cards",
+  "Счета": "Accounts",
+  "Переводы": "Transfers",
+  "Платежи": "Payments",
+  "Кредиты": "Loans",
+  "Депозиты": "Deposits",
+  "История уведомлений": "Notification history",
+  "Способ получения уведомлений": "How to receive notifications",
+  "Email-оповещения": "Email alerts",
+  "SMS-оповещения": "SMS alerts",
+  "Push-оповещения": "Push notifications",
+  "Категория уведомлений": "Notification category",
+  "Денежные операции (отправить/оплатить/получить)": "Money transactions (send/pay/receive)",
+  "Важные обновления": "Important updates",
+  "Новости/акции": "News/promotions",
+  "Личные данные": "Personal data",
+  "Безопасность": "Safety",
+  "Изменить пароль": "Change password",
+  "Уведомления": "Notifications",
+  "Придумайте новый пароль": "Come up with a new password",
+  "Регистрация": "Registration",
+  "Придумайте пароль": "Create a password",
+  "Кабинет пользователя успешно \n зарегистрирован": "User account successfully \n registered",
+  "Войти в кабинет": "Login to your account",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
@@ -113,7 +167,6 @@
   "Отделение банка": "Bank branch",
   "Обменный пункт": "Exchange office",
   "Все": "All",
-  "Реквизиты": "Requisites",
   "Активный": "Active",
   "Закрытый": "Closed",
   "Заблокированный": "Blocked",
@@ -141,19 +194,15 @@
   "Лимиты": "Limits",
   "История операций": "Transaction history",
   "Выписка": "Statement",
-  "Пополнить": "Top-up",
   "Изменить пин-код": "Change PIN code",
   "Запретить операции": "Prohibit operations",
   "Заблокировать карту": "Block card",
   "Действия с картой": "Card actions",
   "Условия": "Terms",
-  "Карты": "Cards",
   "Мои карты": "My cards",
   "Карточные продукты": "Card products",
   "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
   "Оформить депозит": "Open deposit",
-  "Депозиты": "Deposits",
-  "Мои депозиты": "My deposits",
   "Депозиты A-geld": "Deposits A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, A-geld JSC, official site, universal license of the Central Bank of the Russian Federation No. 2475",
   "для звонков по России": "for calls within Russia",
@@ -164,16 +213,12 @@
   "Список услуг": "Service list",
   "Документы": "Documents",
   "Вопросы и ответы": "Q&A",
-  "Личные данные": "Personal data",
   "Войти": "Log in",
-  "Регистрация": "Registration",
   "Новая карта": "New card",
-  "Переводы": "Transfers",
   "Между счетами": "Between accounts",
   "По номеру телефона": "By phone number",
   "По номеру карты": "By card number",
   "По реквизитам": "By requisites",
-  "Платежи": "Payments",
   "Мобильная связь": "Mobile communication",
   "Коммунальные платежи": "Utility payments",
   "Успех": "Success",
