--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -50,6 +50,8 @@
   "Email должен быть валидным": "Email должен быть валидным",
   "Email должен содержать от 8 до 50 символов": "Email должен содержать от 8 до 50 символов",
   "Сохранить": "Сохранить",
+  "Изменить": "Изменить",
+  "Добавить": "Добавить",
   "Обязательное поле": "Обязательное поле",
   "Новый пароль должен быть валидным": "Новый пароль должен быть валидным",
   "Новый пароль должен отличаться от старого": "Новый пароль должен отличаться от старого",
@@ -86,6 +88,58 @@
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
   "Авторизуйтесь": "Авторизуйтесь",
+  "Войдите в личный кабинет": "Войдите в личный кабинет",
+  "Введите код из смс": "Введите код из смс",
+  "Введите пароль": "Введите пароль",
+  "Условия пролонгации депозита": "Условия пролонгации депозита",
+  "Не удалось пролонгировать депозит": "Не удалось пролонгировать депозит",
+  "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
+  "Вернуться к странице депозита": "Вернуться к странице депозита",
+  "Срок пролонгации": "Срок пролонгации",
+  "мес": "мес.",
+  "Пролонгировать депозит": "Пролонгировать депозит",
+  "счета": "счета",
+  "счета с процентами": "счета с процентами",
+  "Схема депозита": "Схема депозита",
+  "Срочный": "Срочный",
+  "Длительность существования": "Длительность существования",
+  "Cтавка при досрочном отзыве": "Cтавка при досрочном отзыве",
+  "Отзывной": "Отзывной",
+  "Изначальная сумма депозита": "Изначальная сумма депозита",
+  "Отозвать": "Отозвать",
+  "Пополнить": "Пополнить",
+  "Реквизиты": "Реквизиты",
+  "График начисления процентов": "График начисления процентов",
+  "Информация о пополнении депозита": "Информация о пополнении депозита",
+  "Пролонгация депозита": "Пролонгация депозита",
+  "Мои депозиты": "Мои депозиты",
+  "Депозит не найден": "Депозит не найден",
+  "Перейти к списку депозитов": "Перейти к списку депозитов",
+  "Главная": "Главная",
+  "Карты": "Карты",
+  "Счета": "Счета",
+  "Переводы": "Переводы",
+  "Платежи": "Платежи",
+  "Кредиты": "Кредиты",
+  "Депозиты": "Депозиты",
+  "История уведомлений": "История уведомлений",
+  "Способ получения уведомлений": "Способ получения уведомлений",
+  "Email-оповещения": "Email-оповещения",
+  "SMS-оповещения": "SMS-оповещения",
+  "Push-оповещения": "Push-оповещения",
+  "Категория уведомлений": "Категория уведомлений",
+  "Денежные операции (отправить/оплатить/получить)": "Денежные операции (отправить/оплатить/получить)",
+  "Важные обновления": "Важные обновления",
+  "Новости/акции": "Новости/акции",
+  "Личные данные": "Личные данные",
+  "Безопасность": "Безопасность",
+  "Изменить пароль": "Изменить пароль",
+  "Уведомления": "Уведомления",
+  "Придумайте новый пароль": "Придумайте новый пароль",
+  "Регистрация": "Регистрация",
+  "Придумайте пароль": "Придумайте пароль",
+  "Кабинет пользователя успешно \n зарегистрирован": "Кабинет пользователя успешно \n зарегистрирован",
+  "Войти в кабинет": "Войти в кабинет",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
@@ -113,7 +167,6 @@
   "Отделение банка": "Отделение банка",
   "Обменный пункт": "Обменный пункт",
   "Все": "Все",
-  "Реквизиты": "Реквизиты",
   "Активный": "Активный",
   "Закрытый": "Закрытый",
   "Заблокированный": "Заблокированный",
@@ -141,19 +194,15 @@
   "Лимиты": "Лимиты",
   "История операций": "История операций",
   "Выписка": "Выписка",
-  "Пополнить": "Пополнить",
   "Изменить пин-код": "Изменить пин-код",
   "Запретить операции": "Запретить операции",
   "Заблокировать карту": "Заблокировать карту",
   "Действия с картой": "Действия с картой",
   "Условия": "Условия",
-  "Карты": "Карты",
   "Мои карты": "Мои карты",
   "Карточные продукты": "Карточные продукты",
   "На данный момент \n у Вас нет депозитов": "На данный момент \n у Вас нет депозитов",
   "Оформить депозит": "Оформить депозит",
-  "Депозиты": "Депозиты",
-  "Мои депозиты": "Мои депозиты",
   "Депозиты A-geld": "Депозиты A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475",
   "для звонков по России": "для звонков по России",
@@ -164,16 +213,12 @@
   "Список услуг": "Список услуг",
   "Документы": "Документы",
   "Вопросы и ответы": "Вопросы и ответы",
-  "Личные данные": "Личные данные",
   "Войти": "Войти",
-  "Регистрация": "Регистрация",
   "Новая карта": "Новая карта",
-  "Переводы": "Переводы",
   "Между счетами": "Между счетами",
   "По номеру телефона": "По номеру телефона",
   "По номеру карты": "По номеру карты",
   "По реквизитам": "По реквизитам",
-  "Платежи": "Платежи",
   "Мобильная связь": "Мобильная связь",
   "Коммунальные платежи": "Коммунальные платежи",
   "Успех": "Успех",
