fix: AGEL-1223 parser config

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,5 +1,5 @@
 {
-  " карта": " card.",
+  " карта.": " card.",
   "Надежная карта на каждый день": "Reliable card for everyday use",
   "Уровень премиальность": "Premium level",
   "Валюта счета": "Account currency",
