--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -1,5 +1,5 @@
 {
-  " карта": " карта.",
+  " карта.": " карта.",
   "Надежная карта на каждый день": "Надежная карта на каждый день",
   "Уровень премиальность": "Уровень премиальность",
   "Валюта счета": "Валюта счета",
