--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -16,5 +16,6 @@
     " ; < = > ? @ [  ] ^ _` { | } ~": " / . ; < = > ? @ [  ] ^ _` { | } ~"
   },
   "№ счета с процентами": "№ счета с процентами",
-  " ": " "
+  " ": " ",
+  " карта": " карта."
 }
