fix: AGEL-1223 parser config

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -98,8 +98,8 @@
   "Срок пролонгации": "Renewal term",
   "мес": "months",
   "Пролонгировать депозит": "Renew the deposit",
-  "счета": "accounts",
-  "счета с процентами": "interest-bearing accounts",
+  "№ счета : ": "№ accounts : ",
+  "№ счета с процентами : ": "№ interest-bearing accounts : ",
   "Схема депозита": "Deposit scheme",
   "Срочный": "Urgent",
   "Длительность существования": "Term of existence",
