--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -96,10 +96,10 @@
   "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
   "Вернуться к странице депозита": "Вернуться к странице депозита",
   "Срок пролонгации": "Срок пролонгации",
-  "мес": "мес.",
+  "мес": "мес",
   "Пролонгировать депозит": "Пролонгировать депозит",
-  "счета": "счета",
-  "счета с процентами": "счета с процентами",
+  "№ счета : ": "№ счета : ",
+  "№ счета с процентами : ": "№ счета с процентами : ",
   "Схема депозита": "Схема депозита",
   "Срочный": "Срочный",
   "Длительность существования": "Длительность существования",
