--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -17,5 +17,8 @@
   },
   "№ счета с процентами": "№ счета с процентами",
   " ": " ",
-  " карта": " карта."
+  " карта": " карта.",
+  "счета с процентами": "счета с процентами",
+  "мес.": "мес.",
+  "счета": "счета"
 }
