--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -12,5 +12,8 @@
   "Процентная ставка при досрочном отзыве депозита": "Interest rate for early deposit withdrawal",
   "Выполнить депозит": "Make a deposit",
   "Банки и отделения": "Banks and branches",
-  " карта": " card."
+  " карта": " card.",
+  "счета с процентами": "interest-bearing accounts",
+  "мес.": "months",
+  "счета": "accounts"
 }
