feat: AGEL-1223 новый текст и перевод для Agreement, новый парсинг, перевод

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -88,6 +88,38 @@
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
   "Авторизуйтесь": "Sign in",
+  "Ознакомитесь с условиями открытия счета": "Read the terms of account opening",
+  "1. Открытие после предоставления всех документов и подписания заявления": "1. Account opening after providing all documents and signing the application",
+  "2. Банк может отказать в открытии счета без объяснения причин": "2. The bank may refuse to open an account without explanation",
+  "3. Плата за ведение счета взимается ежемесячно согласно тарифам Банка": "3. The account maintenance fee is charged monthly according to the Bank's tariffs",
+  "4. Операции по счету возможны через мобильное приложение, интернет-банк, банкоматы и отделения Банка": "4. Account operations are possible through the mobile app, internet banking, ATMs, and bank branches",
+  "5. Проценты на остаток средств и комиссии за операции устанавливаются тарифами Банка": "5. Interest on the account balance and transaction fees are set by the Bank's tariffs",
+  "Принимаю соглашение": "I accept the agreement",
+  "Открыть счет": "Open account",
+  "Выберите тип счета": "Select account type",
+  "Выберите валюту": "Select currency",
+  "Выберите тип карты": "Select card type",
+  "Ознакомьтесь с условиями счета": "Check the account terms",
+  "Не удалось открыть счет": "Failed to open an account",
+  "Мы открыли вам счет!": "We have opened an account for you!",
+  "Перейти к списку счетов": "Go to account list",
+  "Заберу в офисе банка": "Pick up at the bank office",
+  "Потребуется доставка": "Delivery required",
+  "Реквизиты": "Requisites",
+  "Выписка по счету": "Account statement",
+  "Сделать основным": "Make primary",
+  "Закрыть счет": "Close account",
+  "Заблокировать счет": "Block account",
+  "Разблокировать счет": "Unlock account",
+  "Статус заявки": "Application status",
+  "№ счета: ": "Account number: ",
+  "Дата открытия счета": "Account opening date",
+  "Дата закрытия счета": "Account closing date",
+  "Причина блокировки": "Blocking Reason",
+  "Перевод": "Перевод",
+  "Информация о счете": "Account Information",
+  "История операций": "Transaction history",
+  "Счет не найден": "Account not found",
   "Войдите в личный кабинет": "Log in to your personal account",
   "Введите код из смс": "Enter the code from SMS",
   "Введите пароль": "Enter password",
@@ -108,7 +140,6 @@
   "Изначальная сумма депозита": "Initial deposit amount",
   "Отозвать": "Withdraw",
   "Пополнить": "Top-up",
-  "Реквизиты": "Requisites",
   "График начисления процентов": "Interest accrual schedule",
   "Информация о пополнении депозита": "Deposit top-up information",
   "Пролонгация депозита": "Deposit renewal",
@@ -122,6 +153,8 @@
   "Платежи": "Payments",
   "Кредиты": "Loans",
   "Депозиты": "Deposits",
+  "Для просмотра данной информации вы должны быть авторизованы": "To view this information you must be logged in",
+  "Войти в кабинет": "Login to your account",
   "История уведомлений": "Notification history",
   "Способ получения уведомлений": "How to receive notifications",
   "Email-оповещения": "Email alerts",
@@ -139,43 +172,12 @@
   "Регистрация": "Registration",
   "Придумайте пароль": "Create a password",
   "Кабинет пользователя успешно \n зарегистрирован": "User account successfully \n registered",
-  "Войти в кабинет": "Login to your account",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
-  "№ счета: ": "Account number: ",
-  "Мои счета": "My accounts",
-  "Дата открытия счета": "Account opening date",
-  "Дата закрытия счета": "Account closing date",
-  "Причина блокировки": "Blocking Reason",
-  "Открытые счета": "Opened accounts",
-  "Заявки на открытие счета": "Open account requests",
-  "Закрытые счета": "Closed accounts",
-  "Заблокированные счета": "Blocked accounts",
-  "Реквизиты": "Requisites",
-  "Выписка по счету": "Account statement",
-  "Сделать основным": "Make primary",
-  "Закрыть счет": "Close account",
-  "Заблокировать счет": "Block account",
-  "Разблокировать счет": "Unlock account",
-  "Статус заявки": "Application status",
-  "Счет не найден": "Account not found",
-  "Выберите тип счета": "Select account type",
-  "Выберите валюту": "Select currency",
-  "Выберите тип карты": "Select card type",
-  "Ознакомьтесь с условиями счета": "Check the account terms",
-  "Информация о счете": "Account Information",
-  "История операций": "Operations history",
-  "На данный момент \n у Вас нет соответствующих счетов": "You currently have no corresponding accounts",
-  "Открыть счет": "Open account",
   "Больше денег без лишних вложений": "More money without extra investment",
   "Откройте счет не выходя из дома": "Open an account without leaving home",
   "Сделайте шаг навстречу мечте": "Take a step towards your dream",
-  "Заберу в офисе банка": "Pick up at the bank office",
-  "Потребуется доставка": "Delivery required",
-  "Не удалось открыть счет": "Failed to open an account",
-  "Мы открыли вам счет!": "We have opened an account for you!",
-  "Перейти к списку счетов": "Go to account list",
   "Bce": "All",
   "Кредитная": "Credit",
   "Дебетовая": "Debit",
@@ -190,6 +192,12 @@
   "Заблокированный": "Blocked",
   "Автопролонгация": "Autoprolongation",
   "Автопролонгация отключена": "Autoprolongation disabled",
+  "Мои счета": "My accounts",
+  "Открытые счета": "Opened accounts",
+  "Заявки на открытие счета": "Open account requests",
+  "Закрытые счета": "Closed accounts",
+  "Заблокированные счета": "Blocked accounts",
+  "На данный момент \n у Вас нет соответствующих счетов": "You currently have no corresponding accounts",
   "Комиссия за снятие наличных в банкомате другого банка": "Commission for cash withdrawal at another bank's ATM",
   "Комиссия за снятие наличных в банкомате банка-партнёра": "Commission for cash withdrawal at a partner bank's ATM",
   "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Commission for cash withdrawal in another currency at ATMs of banks abroad",
@@ -210,7 +218,6 @@
   "Реквизиты карты": "Card details",
   "Тарифы и комиссии": "Rates and commissions",
   "Лимиты": "Limits",
-  "История операций": "Transaction history",
   "Выписка": "Statement",
   "Изменить пин-код": "Change PIN code",
   "Запретить операции": "Prohibit operations",
