--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -88,6 +88,38 @@
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
   "Авторизуйтесь": "Авторизуйтесь",
+  "Ознакомитесь с условиями открытия счета": "Ознакомитесь с условиями открытия счета",
+  "1. Открытие после предоставления всех документов и подписания заявления": "1. Открытие после предоставления всех документов и подписания заявления",
+  "2. Банк может отказать в открытии счета без объяснения причин": "2. Банк может отказать в открытии счета без объяснения причин",
+  "3. Плата за ведение счета взимается ежемесячно согласно тарифам Банка": "3. Плата за ведение счета взимается ежемесячно согласно тарифам Банка",
+  "4. Операции по счету возможны через мобильное приложение, интернет-банк, банкоматы и отделения Банка": "4. Операции по счету возможны через мобильное приложение, интернет-банк, банкоматы и отделения Банка",
+  "5. Проценты на остаток средств и комиссии за операции устанавливаются тарифами Банка": "5. Проценты на остаток средств и комиссии за операции устанавливаются тарифами Банка",
+  "Принимаю соглашение": "Принимаю соглашение",
+  "Открыть счет": "Открыть счет",
+  "Выберите тип счета": "Выберите тип счета",
+  "Выберите валюту": "Выберите валюту",
+  "Выберите тип карты": "Выберите тип карты",
+  "Ознакомьтесь с условиями счета": "Ознакомьтесь с условиями счета",
+  "Не удалось открыть счет": "Не удалось открыть счет",
+  "Мы открыли вам счет!": "Мы открыли вам счет!",
+  "Перейти к списку счетов": "Перейти к списку счетов",
+  "Заберу в офисе банка": "Заберу в офисе банка",
+  "Потребуется доставка": "Потребуется доставка",
+  "Реквизиты": "Реквизиты",
+  "Выписка по счету": "Выписка по счету",
+  "Сделать основным": "Сделать основным",
+  "Закрыть счет": "Закрыть счет",
+  "Заблокировать счет": "Заблокировать счет",
+  "Разблокировать счет": "Разблокировать счет",
+  "Статус заявки": "Статус заявки",
+  "№ счета: ": "№ счета: ",
+  "Дата открытия счета": "Дата открытия счета",
+  "Дата закрытия счета": "Дата закрытия счета",
+  "Причина блокировки": "Причина блокировки",
+  "Перевод": "Перевод",
+  "Информация о счете": "Информация о счете",
+  "История операций": "История операций",
+  "Счет не найден": "Счет не найден",
   "Войдите в личный кабинет": "Войдите в личный кабинет",
   "Введите код из смс": "Введите код из смс",
   "Введите пароль": "Введите пароль",
@@ -108,7 +140,6 @@
   "Изначальная сумма депозита": "Изначальная сумма депозита",
   "Отозвать": "Отозвать",
   "Пополнить": "Пополнить",
-  "Реквизиты": "Реквизиты",
   "График начисления процентов": "График начисления процентов",
   "Информация о пополнении депозита": "Информация о пополнении депозита",
   "Пролонгация депозита": "Пролонгация депозита",
@@ -122,6 +153,8 @@
   "Платежи": "Платежи",
   "Кредиты": "Кредиты",
   "Депозиты": "Депозиты",
+  "Для просмотра данной информации вы должны быть авторизованы": "Для просмотра данной информации вы должны быть авторизованы",
+  "Войти в кабинет": "Войти в кабинет",
   "История уведомлений": "История уведомлений",
   "Способ получения уведомлений": "Способ получения уведомлений",
   "Email-оповещения": "Email-оповещения",
@@ -139,42 +172,12 @@
   "Регистрация": "Регистрация",
   "Придумайте пароль": "Придумайте пароль",
   "Кабинет пользователя успешно \n зарегистрирован": "Кабинет пользователя успешно \n зарегистрирован",
-  "Войти в кабинет": "Войти в кабинет",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
-  "№ счета: ": "№ счета: ",
-  "Мои счета": "Мои счета",
-  "Дата открытия счета": "Дата открытия счета",
-  "Дата закрытия счета": "Дата закрытия счета",
-  "Причина блокировки": "Причина блокировки",
-  "Открытые счета": "Открытые счета",
-  "Заявки на открытие счета": "Заявки на открытие счета",
-  "Закрытые счета": "Закрытые счета",
-  "Заблокированные счета": "Заблокированные счета",
-  "Выписка по счету": "Выписка по счету",
-  "Сделать основным": "Сделать основным",
-  "Закрыть счет": "Закрыть счет",
-  "Заблокировать счет": "Заблокировать счет",
-  "Разблокировать счет": "Разблокировать счет",
-  "Статус заявки": "Статус заявки",
-  "Счет не найден": "Счет не найден",
-  "Выберите тип счета": "Выберите тип счета",
-  "Выберите валюту": "Выберите валюту",
-  "Выберите тип карты": "Выберите тип карты",
-  "Ознакомьтесь с условиями счета": "Ознакомьтесь с условиями счета",
-  "Информация о счете": "Информация о счете",
-  "История операций": "История операций",
-  "На данный момент \n у Вас нет соответствующих счетов": "На данный момент \n у Вас нет соответствующих счетов",
-  "Открыть счет": "Открыть счет",
   "Больше денег без лишних вложений": "Больше денег без лишних вложений",
   "Откройте счет не выходя из дома": "Откройте счет не выходя из дома",
   "Сделайте шаг навстречу мечте": "Сделайте шаг навстречу мечте",
-  "Заберу в офисе банка": "Заберу в офисе банка",
-  "Потребуется доставка": "Потребуется доставка",
-  "Не удалось открыть счет": "Не удалось открыть счет",
-  "Мы открыли вам счет!": "Мы открыли вам счет!",
-  "Перейти к списку счетов": "Перейти к списку счетов",
   "Bce": "Bce",
   "Кредитная": "Кредитная",
   "Дебетовая": "Дебетовая",
@@ -189,6 +192,12 @@
   "Заблокированный": "Заблокированный",
   "Автопролонгация": "Автопролонгация",
   "Автопролонгация отключена": "Автопролонгация отключена",
+  "Мои счета": "Мои счета",
+  "Открытые счета": "Открытые счета",
+  "Заявки на открытие счета": "Заявки на открытие счета",
+  "Закрытые счета": "Закрытые счета",
+  "Заблокированные счета": "Заблокированные счета",
+  "На данный момент \n у Вас нет соответствующих счетов": "На данный момент \n у Вас нет соответствующих счетов",
   "Комиссия за снятие наличных в банкомате другого банка": "Комиссия за снятие наличных в банкомате другого банка",
   "Комиссия за снятие наличных в банкомате банка-партнёра": "Комиссия за снятие наличных в банкомате банка-партнёра",
   "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом",
