feat: almost done w first page

--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -27,6 +27,7 @@
   "Квартира": "Квартира",
   "Город": "Город",
   "Индекс": "Индекс",
+  "Публичным договором ": "Публичным договором ",
   "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка": "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка",
   "Контактные данные": "Контактные данные",
   "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "Телефон нужен для того, чтобы подтверждать операции и настройки счета",
