--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -88,6 +88,7 @@
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
   "Авторизуйтесь": "Sign in",
+  "Публичным договором ": "Public contract ",
   "Ознакомитесь с условиями открытия счета": "Read the terms of account opening",
   "1. Открытие после предоставления всех документов и подписания заявления": "1. Account opening after providing all documents and signing the application",
   "2. Банк может отказать в открытии счета без объяснения причин": "2. The bank may refuse to open an account without explanation",
