feat: AGEL-1606 добавлен перевод и импорты для PNG

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -17,6 +17,12 @@
   "Процентная ставка": "Interest rate",
   "Сумма на депозитном счете": "Deposit balance",
   "Окончание срока вклада": "Deposit end of term",
+  "До 30 сентября оформите ": "Apply before September 30 ",
+  "до": "up to",
+  "от": "from",
+  "Минимальная сумма депозита": "Minimum deposit amount",
+  "дней": "days",
+  "Оформить": "Apply",
   "Назад": "Back",
   "Вперед": "Next",
   "Основной": "Main",
@@ -59,7 +65,7 @@
   "Текущий пароль": "Current password",
   "Новый пароль": "New password",
   "Подтвердите новый пароль": "Confirm new password",
-  "Продолжить": "Continue",
+  "Сменить пароль": "Change password",
   "Повторная отправка через": "Resend in",
   "Отправить смс еще раз": "Resend SMS",
   "На Ваш номер телефона отправлен 6-значный код подтверждения": "A 6-digit confirmation code has been sent to your phone number",
@@ -67,6 +73,7 @@
   "Пароль должен быть валидным": "Password must be valid",
   "Подтвердите пароль": "Confirm password",
   "Отправить": "Send",
+  "Продолжить": "Continue",
   "Номер телефона": "Phone number",
   "Номер телефона должен содержать 11 цифр": "Phone number must contain 11 digits",
   "Нажав кнопку «Далее», вы соглашаетесь с ": "By clicking the 'Next' button, you agree to ",
@@ -85,10 +92,10 @@
   "Включен CapsLock": "CapsLock is on",
   "Восстановление пароля": "Password recovery",
   "Выйти": "Log out",
+  "У вас нет аккаунта?": "Don't have an account?",
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
   "Авторизуйтесь": "Sign in",
-  "Публичным договором ": "Public contract ",
   "Ознакомитесь с условиями открытия счета": "Read the terms of account opening",
   "1. Открытие после предоставления всех документов и подписания заявления": "1. Account opening after providing all documents and signing the application",
   "2. Банк может отказать в открытии счета без объяснения причин": "2. The bank may refuse to open an account without explanation",
@@ -117,36 +124,35 @@
   "Дата открытия счета": "Account opening date",
   "Дата закрытия счета": "Account closing date",
   "Причина блокировки": "Blocking Reason",
-  "Перевод": "Перевод",
+  "Перевод": "Transfer",
   "Информация о счете": "Account Information",
   "История операций": "Transaction history",
   "Счет не найден": "Account not found",
   "Войдите в личный кабинет": "Log in to your personal account",
   "Введите код из смс": "Enter the code from SMS",
   "Введите пароль": "Enter password",
-  "Условия пролонгации депозита": "Conditions for deposit renewal",
+  "Условия пролонгации депозита": "Terms of deposit extension",
   "Не удалось пролонгировать депозит": "Failed to renew the deposit",
-  "Ваш депозит успешно пролонгирован": "Your deposit has been successfully renewed",
-  "Вернуться к странице депозита": "Return to the deposit page",
-  "Срок пролонгации": "Renewal term",
-  "мес": "months",
-  "Пролонгировать депозит": "Renew the deposit",
+  "Ваш депозит успешно пролонгирован": "Your deposit has been successfully extended",
+  "Вернуться к странице депозита": "Return to deposit page",
+  "Срок пролонгации": "Extension period",
+  "Пролонгировать депозит": "Extend deposit",
   "№ счета : ": "№ accounts : ",
   "№ счета с процентами : ": "№ interest-bearing accounts : ",
   "Схема депозита": "Deposit scheme",
   "Срочный": "Urgent",
   "Длительность существования": "Term of existence",
-  "Cтавка при досрочном отзыве": "Rate for early withdrawal",
+  "Ставка при досрочном отзыве": "Rate for early withdrawal",
   "Отзывной": "Revocable",
   "Изначальная сумма депозита": "Initial deposit amount",
   "Отозвать": "Withdraw",
   "Пополнить": "Top-up",
+  "Депозит не найден": "Deposit not found",
+  "Перейти к списку депозитов": "Go to the list of deposits",
   "График начисления процентов": "Interest accrual schedule",
   "Информация о пополнении депозита": "Deposit top-up information",
   "Пролонгация депозита": "Deposit renewal",
   "Мои депозиты": "My deposits",
-  "Депозит не найден": "Deposit not found",
-  "Перейти к списку депозитов": "Go to the list of deposits",
   "Главная": "Main",
   "Карты": "Cards",
   "Счета": "Accounts",
@@ -173,6 +179,9 @@
   "Регистрация": "Registration",
   "Придумайте пароль": "Create a password",
   "Кабинет пользователя успешно \n зарегистрирован": "User account successfully \n registered",
+  "Добро пожаловать в \n интернет-банкинг A-Geld": "Welcome to \n A-Geld Internet banking",
+  "Доступ в личный кабинет возможен с телефонного \n номера, указанного при открытии счета в нашем банке": "Access to your personal account is possible from the telephone \n number specified when opening an account with our bank",
+  "Для создания кабинета пользователя нажмите кнопку Регистрация": "To create a user account, click the Registration button",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
@@ -229,6 +238,9 @@
   "Карточные продукты": "Card products",
   "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
   "Оформить депозит": "Open deposit",
+  "Сумма депозита": "Deposit amount",
+  "Срок депозита": "Deposit term",
+  "Сбросить фильтр": "Reset filter",
   "Депозиты A-geld": "Deposits A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, A-geld JSC, official site, universal license of the Central Bank of the Russian Federation No. 2475",
   "для звонков по России": "for calls within Russia",
