--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -17,6 +17,12 @@
   "Процентная ставка": "Процентная ставка",
   "Сумма на депозитном счете": "Сумма на депозитном счете",
   "Окончание срока вклада": "Окончание срока вклада",
+  "До 30 сентября оформите ": "До 30 сентября оформите ",
+  "до": "до",
+  "от": "от",
+  "Минимальная сумма депозита": "Минимальная сумма депозита",
+  "дней": "дней",
+  "Оформить": "Оформить",
   "Назад": "Назад",
   "Вперед": "Вперед",
   "Основной": "Основной",
@@ -27,7 +33,6 @@
   "Квартира": "Квартира",
   "Город": "Город",
   "Индекс": "Индекс",
-  "Публичным договором ": "Публичным договором ",
   "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка": "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка",
   "Контактные данные": "Контактные данные",
   "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "Телефон нужен для того, чтобы подтверждать операции и настройки счета",
@@ -60,7 +65,7 @@
   "Текущий пароль": "Текущий пароль",
   "Новый пароль": "Новый пароль",
   "Подтвердите новый пароль": "Подтвердите новый пароль",
-  "Продолжить": "Продолжить",
+  "Сменить пароль": "Сменить пароль",
   "Повторная отправка через": "Повторная отправка через",
   "Отправить смс еще раз": "Отправить смс еще раз",
   "На Ваш номер телефона отправлен 6-значный код подтверждения": "На Ваш номер телефона отправлен 6-значный код подтверждения",
@@ -68,6 +73,7 @@
   "Пароль должен быть валидным": "Пароль должен быть валидным",
   "Подтвердите пароль": "Подтвердите пароль",
   "Отправить": "Отправить",
+  "Продолжить": "Продолжить",
   "Номер телефона": "Номер телефона",
   "Номер телефона должен содержать 11 цифр": "Номер телефона должен содержать 11 цифр",
   "Нажав кнопку «Далее», вы соглашаетесь с ": "Нажав кнопку «Далее», вы соглашаетесь с ",
@@ -86,6 +92,7 @@
   "Включен CapsLock": "Включен CapsLock",
   "Восстановление пароля": "Восстановление пароля",
   "Выйти": "Выйти",
+  "У вас нет аккаунта?": "У вас нет аккаунта?",
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
   "Авторизуйтесь": "Авторизуйтесь",
@@ -129,24 +136,23 @@
   "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
   "Вернуться к странице депозита": "Вернуться к странице депозита",
   "Срок пролонгации": "Срок пролонгации",
-  "мес": "мес",
   "Пролонгировать депозит": "Пролонгировать депозит",
   "№ счета : ": "№ счета : ",
   "№ счета с процентами : ": "№ счета с процентами : ",
   "Схема депозита": "Схема депозита",
   "Срочный": "Срочный",
   "Длительность существования": "Длительность существования",
-  "Cтавка при досрочном отзыве": "Cтавка при досрочном отзыве",
+  "Ставка при досрочном отзыве": "Ставка при досрочном отзыве",
   "Отзывной": "Отзывной",
   "Изначальная сумма депозита": "Изначальная сумма депозита",
   "Отозвать": "Отозвать",
   "Пополнить": "Пополнить",
+  "Депозит не найден": "Депозит не найден",
+  "Перейти к списку депозитов": "Перейти к списку депозитов",
   "График начисления процентов": "График начисления процентов",
   "Информация о пополнении депозита": "Информация о пополнении депозита",
   "Пролонгация депозита": "Пролонгация депозита",
   "Мои депозиты": "Мои депозиты",
-  "Депозит не найден": "Депозит не найден",
-  "Перейти к списку депозитов": "Перейти к списку депозитов",
   "Главная": "Главная",
   "Карты": "Карты",
   "Счета": "Счета",
@@ -173,6 +179,9 @@
   "Регистрация": "Регистрация",
   "Придумайте пароль": "Придумайте пароль",
   "Кабинет пользователя успешно \n зарегистрирован": "Кабинет пользователя успешно \n зарегистрирован",
+  "Добро пожаловать в \n интернет-банкинг A-Geld": "Добро пожаловать в \n интернет-банкинг A-Geld",
+  "Доступ в личный кабинет возможен с телефонного \n номера, указанного при открытии счета в нашем банке": "Доступ в личный кабинет возможен с телефонного \n номера, указанного при открытии счета в нашем банке",
+  "Для создания кабинета пользователя нажмите кнопку Регистрация": "Для создания кабинета пользователя нажмите кнопку  Регистрация",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
@@ -229,6 +238,9 @@
   "Карточные продукты": "Карточные продукты",
   "На данный момент \n у Вас нет депозитов": "На данный момент \n у Вас нет депозитов",
   "Оформить депозит": "Оформить депозит",
+  "Сумма депозита": "Сумма депозита",
+  "Срок депозита": "Срок депозита",
+  "Сбросить фильтр": "Сбросить фильтр",
   "Депозиты A-geld": "Депозиты A-geld",
   "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475": "2023, АО «A-Geld», официальный сайт, универсальная лицензия ЦБ РФ № 2475",
   "для звонков по России": "для звонков по России",
